# ctfcup-2024-quals

./: README.md
tasks/crypto/easy-ALODISPETCHER/: README.MD
tasks/crypto/easy-ALODISPETCHER/solution/: flag.txt  sol.py
tasks/crypto/hard-annihilatornai_pushka/: README.MD
tasks/crypto/hard-annihilatornai_pushka/public/: hard.py  output.txt
tasks/crypto/hard-annihilatornai_pushka/solution/: flag.txt  sol.py
tasks/crypto/medium-likvidirovan/: README.MD  prepare_public.sh
tasks/crypto/medium-likvidirovan/deploy/: Dockerfile  docker-compose.yml  entrypoint.sh  (+1 more)
tasks/misc/hard-just-bfs/: Readme.md  prepare-public.sh
tasks/misc/hard-just-bfs/solve/: .gitignore  Cargo.toml
tasks/misc/hard-just-bfs/solve/src/: main.rs
tasks/misc/medium-long-graph/: Readme.md
tasks/misc/neat/: README.md
tasks/pwn/easy-pointless/: Readme.md  prepare-public.sh
tasks/pwn/hard-R4v5h4n-N-Dj4m5hu7/: Readme.md  prepare-public.sh
tasks/pwn/medium-olymp/: Readme.md  prepare-public.sh
tasks/reverse/easy-searcher/: Readme.md
tasks/reverse/hard-weird-crypter/: Readme.md  prepare-public.sh
tasks/reverse/hard-weird-crypter/dev/: CMakeLists.txt  generate.py  weird_crypter
tasks/reverse/hard-weird-crypter/dev/run_dir/: flag.txt
tasks/reverse/hard-weird-crypter/dev/src/: encrypt.s  main.cc
tasks/reverse/medium-strange-rootkit/: Readme.md
tasks/web/easy-etcstore/: README.md  prepare-public.sh
tasks/web/easy-etcstore-revenge/: README.md  prepare-public.sh
tasks/web/hard-hackerchat/: README.md  prepare-public.sh
tasks/web/medium-konstruktor/: README.md  prepare-public.sh
(+123 files in other folders)
