[package]
name = "olymp_problem_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
subprocess = "0.2.9"
image = "0.25.2"
tempfile = "3.12.0"
reqwest = {version = "0.12.7", features = ["cookies", "json"]}
serde = {version = "1.0.210", features = ["derive"]}
clap = {version = "4.5.17", features = [ "derive" ]}
tokio = {version = "1.40.0", features = ["full"]}
